--- a/first-map.ipynb
+++ b/first-map.ipynb
@@ -967,6 +967,19 @@
         "# Display the map\n",
         "VBU_map"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "id": "8b83a710",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%capture\n",
+        "%%bash\n",
+        "#Coverting to HTML\n",
+        "jupyter nbconvert first-map.ipynb --to html "
+      ]
     }
   ],
   "metadata": {
